Create show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,33 @@
-<h1>This is the detail page for a single user</h1>
+<section class="details--container">
+  <article class="details--first--box">
+    <section>
+      <!-- <%= render 'user_list' %> -->
+    </section>
+    <section class="bio--container">
+      <h5>Bio</h5>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Harum et quae consequuntur, cupiditate earum vel molestiae d
+        electus officia nostrum quibusdam suscipit facere dolorum 
+        excepturi odit ut dolores vitae magni, fugit corporis in facilis tempore 
+        necessitatibus. Maxime pariatur, alias quae sint 
+        exercitationem fuga ipsa voluptatibus! 
+        Esse ab facere reiciendis beatae doloribus.
+      </p>
+    </section>
+    <ul class="post--list">
+      <li class="post--item">
+        <h5>Post #1</h5>
+        <p>Lorem ipsum, dolor sit amet consectetur 
+          adipisicing elit. Praesentium ab laudantium, 
+          veniam aliquam voluptate eligendi 
+          esse cumque laborum? Modi, dignissimos...
+        </p>
+        <div class="likes--and--comments">
+          <span>Comments: x</span>
+          <span>Likes: y</span>
+        </div>
+      </li>
+    </ul>
+  </article>
+  <button class="see--all--btn">See all posts</button>
+</section>
