Create show page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,7 @@
  *= require_tree .
  *= require_self
  */
+
+@import 'partials/user_list';
+@import 'components/show';
+@import 'components/index';
