--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,18 +15,7 @@
       </p>
     </section>
     <ul class="post--list">
-      <li class="post--item">
-        <h5>Post #1</h5>
-        <p>Lorem ipsum, dolor sit amet consectetur 
-          adipisicing elit. Praesentium ab laudantium, 
-          veniam aliquam voluptate eligendi 
-          esse cumque laborum? Modi, dignissimos...
-        </p>
-        <div class="likes--and--comments">
-          <span>Comments: x</span>
-          <span>Likes: y</span>
-        </div>
-      </li>
+      <%= render 'posts/post_list' %>
     </ul>
   </article>
   <button class="see--all--btn">See all posts</button>
