Create index page for posts

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <section class="details--container">
-  <article class="details--first--box">
-    <section>
-      <!-- <%= render 'user_list' %> -->
+  <article class="first--box">
+    <section class="user--info">
+       <%= render 'user_list' %>
     </section>
     <section class="bio--container">
       <h5>Bio</h5>
@@ -18,5 +18,5 @@
       <%= render 'posts/post_list' %>
     </ul>
   </article>
-  <button class="see--all--btn">See all posts</button>
+  <button class="btn">See all posts</button>
 </section>
