--- a/app/assets/stylesheets/components/show.css
+++ b/app/assets/stylesheets/components/show.css
@@ -4,6 +4,10 @@
   align-items: center;
 }
 
+.user--info {
+  margin: 10px 0;
+}
+
 .bio--container {
   border: 1px solid #000;
   display: grid;
@@ -11,11 +15,11 @@
   padding: 1rem;
 }
 
-.details--first--box {
+.first--box {
   min-height: 100vh;
 }
 
-.see--all--btn {
+.btn {
   margin-top: 20px;
   padding: 15px 20px;
   border: none;
