--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,14 @@
-<h1>Here is a list of posts for a given user</h1>
+<section class="posts--container">
+  <article class="first--box">
+    <section>
+      <%= render 'users/user_list' %>
+    </section>
+    <ul class='comments--posts--container'>
+      <%= render 'shared/comments_and_posts' %>
+      <%= render 'shared/comments_and_posts' %>
+      <%= render 'shared/comments_and_posts' %>
+      <%= render 'shared/comments_and_posts' %>
+    </ul>
+  </article>
+  <button class="btn">Pagination</button>
+</section>
