--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,43 @@
-<h1>Here is the details of a post for a given user</h1>
+<section>
+  <article class="post--box">
+    <section class="post--box--header">
+      <p>Post 1 by username</p>
+      <div class="likes--and--comments">
+        <span>Comments: x</span>
+        <span>Likes: y</span>
+      </div>
+    </section>
+    <section class="post--content">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Facere ut asperiores velit illo eligendi, soluta impedit 
+        natus dignissimos consectetur maxime quibusdam iure minima 
+        similique perferendis voluptatibus fugiat esse nam tenetur 
+        quasi accusantium. Sunt assumenda sequi qui animi quidem iure 
+        dolor aliquid consequuntur, eum fugit repellendus, ut debitis 
+        maiores, aut eligendi doloremque atque itaque aspernatur 
+        dolores suscipit maxime. Possimus consequatur reprehenderit 
+        excepturi, accusamus animi nostrum iste, maxime ipsam laborum 
+        veritatis ad, velit architecto quia esse. Ipsa fugiat odit, 
+        modi tenetur aliquid sapiente adipisci commodi voluptas quas, 
+        dolorem, omnis quibusdam possimus cumque recusandae quae 
+        eligendi magni earum. Quae in, sunt aperiam dolores ratione 
+        asperiores eos iusto necessitatibus cum quo autem repudiandae 
+        quasi voluptate nemo earum unde! Rem voluptas atque 
+        repellendus. Ad quibusdam molestias maxime tempora esse 
+        officia possimus fugit fuga culpa veniam debitis voluptates 
+        inventore eaque, minima natus corrupti delectus neque aliquid 
+        ea labore necessitatibus? Totam laborum, maiores explicabo ad 
+        sit facilis consectetur laudantium, error voluptas aut maxime 
+        ab harum. Obcaecati facere necessitatibus explicabo maiorest!
+      </p>
+    </section>
+  </article>
+  <article>
+     <ul class="comments--container">
+      <%= render 'comment' %>
+      <%= render 'comment' %>
+      <%= render 'comment' %>
+    </ul>
+  </article>
+</section>
