--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,14 @@
 <main>
-  <ul>
+  <ul class="users--list">
+    <%= render 'user_list' %>
+    <%= render 'user_list' %>
+    <%= render 'user_list' %>
+    <%= render 'user_list' %>
+    <%= render 'user_list' %>
+    <%= render 'user_list' %>
+    <%= render 'user_list' %>
+    <%= render 'user_list' %>
+    <%= render 'user_list' %>
     <%= render 'user_list' %>
   </ul>
 </main>
