--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,6 +16,10 @@
     </section>
     <ul class="post--list">
       <%= render 'posts/post_list' %>
+      <%= render 'posts/post_list' %>
+      <%= render 'posts/post_list' %>
+      <%= render 'posts/post_list' %>
+      <%= render 'posts/post_list' %>
     </ul>
   </article>
   <button class="btn">See all posts</button>
