--- a/app/views/posts/_post_list.html.erb
+++ b/app/views/posts/_post_list.html.erb
@@ -1,12 +1,8 @@
 <li class="post--item">
-  <h5>Post 1</h5>
-  <p>Lorem ipsum, dolor sit amet consectetur 
-    adipisicing elit. Praesentium ab laudantium, 
-    veniam aliquam voluptate eligendi 
-    esse cumque laborum? Modi, dignissimos...
-  </p>
+  <h5><%= post.title %></h5>
+  <p><%= post.text %></p>
   <div class="likes--and--comments">
-    <span>Comments: x</span>
-    <span>Likes: y</span>
+    <span>Comments: <%= post.comments_counter %></span>
+    <span>Likes:  <%= post.likes_counter %></span>
   </div>
 </li>
