--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,12 @@
 <section class="posts--container">
   <article class="first--box">
     <section>
-      <%= render 'users/user_list' %>
+      <%= render 'users/user_list', user: User.find(params[:user_id]) %>
     </section>
     <ul class='comments--posts--container'>
-      <%= render 'shared/comments_and_posts' %>
-      <%= render 'shared/comments_and_posts' %>
-      <%= render 'shared/comments_and_posts' %>
-      <%= render 'shared/comments_and_posts' %>
+      <% @posts.each do |post| %>
+        <%= render 'shared/comments_and_posts', post: post%>
+      <% end %>
     </ul>
   </article>
   <button class="btn">Pagination</button>
