--- a/app/assets/stylesheets/components/show.css
+++ b/app/assets/stylesheets/components/show.css
@@ -13,11 +13,17 @@
   min-height: 100vh;
 }
 
+.btn--container {
+  display: flex;
+  justify-content: center;
+}
+
 .btn {
-  margin-top: 20px;
   padding: 15px 20px;
   border: none;
-  color: #fff;
-  background-color: blue;
+  font-size: 1rem;
+  font-weight: 800;
+  text-transform: capitalize;
+  background-color: #cebcbc;
   border-radius: 5px;
 }
