--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,10 +8,17 @@
       <p><%= @user.bio %></p>
     </section>
     <ul class="post--list">
-      <% @user.posts.each do |post| %>
-        <%= render 'posts/post_list', post: post %>
+       <% if @user.posts.count > 0 %>
+        <% @user.most_recent_posts.each do |post| %>
+          <%= render 'posts/post_list', post: post %>
+        <% end %>
+      <% else %>
+        <h3>This user has no post at the moment</h3>
       <% end %>
     </ul>
   </article>
-  <button class="btn">See all posts</button>
+  <div class="btn--container">
+     <%= link_to 'See all posts', user_posts_path(@user), class: 'btn' %>
+  </div>
+  <%# <b class="btn">See all posts</b> %>
 </section>
