--- a/app/assets/stylesheets/partials/_user_list.css
+++ b/app/assets/stylesheets/partials/_user_list.css
@@ -18,13 +18,17 @@
   padding: 1rem;
 }
 
-.user--info--container p {
-  display: flex;
-  font-size: 1.2rem;
-  gap: 0.5rem;
-  align-self: flex-end;
-}
-
 .user--info--container h3 {
   font-size: 2rem;
+  padding-top: 1.5rem;
+}
+
+.flex--bottom {
+  display: flex;
+  justify-content: space-between;
+}
+
+.flex--bottom a {
+  font-size: 1rem;
+  text-transform: capitalize;
 }
