--- a/app/views/posts/_post_list.html.erb
+++ b/app/views/posts/_post_list.html.erb
@@ -1,8 +1,13 @@
 <li class="post--item">
-  <h5><%= post.title %></h5>
-  <p><%= post.text %></p>
+  <div class="post--content">
+    <h5><%= post.title %></h5>
+    <p><%= slice_text(post.text) %></p>
+  </div>
   <div class="likes--and--comments">
-    <span>Comments: <%= post.comments_counter %></span>
-    <span>Likes:  <%= post.likes_counter %></span>
+    <%= link_to "view post", user_post_path(user, post) %>
+    <p>
+      <span>Comments: <%= post.comments_counter %></span>
+      <span>Likes:  <%= post.likes_counter %></span>
+    </p>
   </div>
 </li>
