Add link to create new post for current_user

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,5 +4,8 @@
     <li>
       <%= link_to 'users', users_path%>
     </li>
+     <li>
+      <%= link_to 'create new post', new_user_post_path(current_user)%>
+    </li>
   </ul>
 </header>
