--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,6 +9,7 @@
     </section>
     <section class="post--content">
       <p><%= @post.text %></p>
+      <%= button_to "Like", user_post_likes_path(current_user, @post), data: { turbo_method: :post }, class: "btn" %>
     </section>
   </article>
   <article>
