Style like button

--- a/app/assets/stylesheets/components/post_index.css
+++ b/app/assets/stylesheets/components/post_index.css
@@ -7,7 +7,10 @@
   display: flex;
   justify-content: space-between;
 }
-
 .post--content {
-  margin: 20px 0;
+  padding: 1rem 0;
+}
+.like--container {
+  margin-top: 20px;
+  
 }
