--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,11 +5,11 @@
     <% end %>
   <% end %>
   <div>
-    <%= f.label :title %><br>
+    <%= f.label :title %>
     <%= f.text_field :title%>
   </div>
   <div>
-    <%= f.label :text %><br>
+    <%= f.label :text %>
     <%= f.text_area :text %>
   </div>
   <div>
