--- a/app/views/users/_user_list.html.erb
+++ b/app/views/users/_user_list.html.erb
@@ -8,7 +8,7 @@
       <%= link_to 'view profile', user_path(user) %>
       <p>
         <span>Number of posts:</span>
-        <span><%= user.posts.count %></span>
+        <span><%= user.posts_counter %></span>
       </p>
     </div>
   </article>
