--- a/app/assets/stylesheets/components/index.css
+++ b/app/assets/stylesheets/components/index.css
@@ -29,18 +29,21 @@ a {
   text-decoration: none;
 }
 
-input, textarea {
+input,
+textarea {
   width: 100%;
   padding: 10px;
   border-radius: 5px;
   border: none;
-  background-color: none;
+  background: none;
 }
+
 form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
+
 form label {
   font-size: 1.5rem;
   display: block;
