--- a/app/assets/stylesheets/partials/_user_list.css
+++ b/app/assets/stylesheets/partials/_user_list.css
@@ -10,6 +10,12 @@
   height: 150px;
 }
 
+.image--container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .user--info--container {
   border: 1px solid #000;
   display: flex;
