--- a/app/views/users/_user_list.html.erb
+++ b/app/views/users/_user_list.html.erb
@@ -3,9 +3,8 @@
     <%= image_tag user.photo, alt: "#{user.name}'s Photo" %>
   </article>
   <article class="user--info--container">
-    <h3><%= user.name %></h3>
+    <h3> <%= link_to user.name, user_path(user) %></h3>
     <div class="flex--bottom">
-      <%= link_to 'view profile', user_path(user) %>
       <p>
         <span>Number of posts:</span>
         <span><%= user.posts_counter %></span>
