--- a/app/assets/stylesheets/components/index.css
+++ b/app/assets/stylesheets/components/index.css
@@ -34,7 +34,7 @@ textarea {
   width: 100%;
   padding: 10px;
   border-radius: 5px;
-  border: none;
+  border: 1px solid gray;
   background: none;
 }
 
@@ -57,7 +57,7 @@ textarea {
 
 input[type="submit"] {
   background-color: rgb(54, 54, 226);
-  width: 200px;
+  width: 100%;
   color: white;
   padding: 15px 0;
   cursor: pointer;
