--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,8 +4,10 @@
     <li>
       <%= link_to 'users', users_path%>
     </li>
-     <li>
-      <%= link_to 'create post', new_user_post_path(current_user)%>
-    </li>
+    <% if user_signed_in? %>
+      <li>
+        <%= link_to 'create post', new_user_post_path(current_user)%>
+      </li>
+    <% end %>
   </ul>
 </header>
