--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,5 +4,17 @@
     <li>
       <%= link_to 'users', users_path%>
     </li>
+    <% if user_signed_in? %>
+      <li>
+       <%= link_to 'create post', new_user_post_path(current_user)%>
+      </li>
+       <li>
+      <%= link_to 'logout', destroy_user_session_path, data: {turbo_method: :delete} %>
+      </li>
+    <% else %>
+      <li>
+        <%= link_to 'login', new_user_session_path %>
+      </li>
+    <% end %>
   </ul>
 </header>
